# vllm_k8s

./: README.md  docker-compose.yml  model_status_example.py  project_structure.md  pyproject.toml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: model_monitor.py  ray_service.py  vllm_engine.py
docker/: Dockerfile  requirements.txt
docs/: api.md  deployment.md  troubleshooting.md
examples/: api_client_example.py  model_status_example.py  monitoring_dashboard.py
k8s/: configmap.yaml  gpu_operator.yaml  monitoring.yaml  ray_cluster.yaml  vllm_deployment.yaml
scripts/: deploy.sh  docker_setup.sh  gpu_operator_setup.sh  install_continue.sh  install_master.sh  k8s_cluster_init.sh  kubernetes_setup.sh  nvidia_setup.sh  ray_operator_setup.sh  setup.sh  system_update.sh  test_api.sh  test_installation.sh  vllm_setup.sh
tests/: __init__.py  conftest.py  test_api.py  test_model_monitor.py  test_ray_service.py  test_vllm_service.py
uml/: simple_architecture.mermaid  simple_class.mermaid  simple_deployment.mermaid  simple_monitoring.mermaid  simple_sequence.mermaid
